Implementado modo painel de comando

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,9 @@
         "livre.h": "c",
         "controle_pid.h": "c",
         "semaforo.h": "c",
-        "contagem_binaria.h": "c"
+        "contagem_binaria.h": "c",
+        "adc.h": "c",
+        "soft_timer.h": "c",
+        "painel_comando.h": "c"
     }
 }
