--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "contagem_binaria.h": "c",
         "adc.h": "c",
         "soft_timer.h": "c",
-        "painel_comando.h": "c"
+        "painel_comando.h": "c",
+        "math.h": "c"
     }
 }
